--- a/src/layers/dependencies/package.json
+++ b/src/layers/dependencies/package.json
@@ -6,9 +6,13 @@
   "author": "jquirossoto",
   "license": "ISC",
   "dependencies": {
+    "@middy/core": "^2.5.7",
     "@middy/do-not-wait-for-empty-event-loop": "^2.5.7",
+    "@middy/http-error-handler": "^2.5.7",
+    "@middy/http-json-body-parser": "^2.5.7",
+    "@middy/http-response-serializer": "^2.5.7",
     "aws-sdk": "^2.1073.0",
-    "middy": "^0.36.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.6.0"
   }
 }
