--- a/template.yaml
+++ b/template.yaml
@@ -98,3 +98,63 @@ Resources:
             Path: /{id}
             Method: get
             RestApiId: !Ref API
+
+  ListFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: books-service-list
+      CodeUri: dist/handlers/list
+      Handler: app.handler
+      Layers:
+        - !Ref DependencyLayer
+        - !Ref CommonLayer
+      Policies:
+        - DynamoDBCrudPolicy:
+          TableName: !Ref DynamoDBTable
+      Events:
+        ListBooksEvent:
+          Type: Api
+          Properties:
+            Path: /
+            Method: get
+            RestApiId: !Ref API
+
+  UpdateFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: books-service-update
+      CodeUri: dist/handlers/update
+      Handler: app.handler
+      Layers:
+        - !Ref DependencyLayer
+        - !Ref CommonLayer
+      Policies:
+        - DynamoDBCrudPolicy:
+          TableName: !Ref DynamoDBTable
+      Events:
+        UpdatedBooksEvent:
+          Type: Api
+          Properties:
+            Path: /{id}
+            Method: put
+            RestApiId: !Ref API
+
+  DeleteFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: books-service-delete
+      CodeUri: dist/handlers/delete
+      Handler: app.handler
+      Layers:
+        - !Ref DependencyLayer
+        - !Ref CommonLayer
+      Policies:
+        - DynamoDBCrudPolicy:
+          TableName: !Ref DynamoDBTable
+      Events:
+        DeleteBooksEvent:
+          Type: Api
+          Properties:
+            Path: /{id}
+            Method: delete
+            RestApiId: !Ref API
