--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 phases:
     install:
         runtime-versions:
-            nodejs: 12
+            nodejs: 14
     pre_build:
         commands:
-            - npm ci
+            - npm ci --unsafe-perm
     build:
         commands:
             - npm run build
