--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
     build:
         commands:
             - npm run build
-            - npm run test
+            # - npm run test
     post_build:
         commands:
             - aws cloudformation package --template-file template.yaml --s3-bucket book-service-packages-ckzq3rnp2000009jwao6ofus8 --output-template-file packaged.yaml
