--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "baseUrl": ".",
         "paths": {
             "*": ["src/layers/dependencies/nodejs/node_modules/*"],
-            "/opt/nodejs/*": ["src/layers/common/*"]
+            "/opt/*": ["src/layers/common/*"]
         }
     },
     "include": ["src/**/*.ts"],
