adds watch mode scripts

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
         "postinstall": "cd src/layers/dependencies/nodejs && npm ci",
         "prestart": "npm run build",
         "start": "sam local start-api --docker-network books-service_book-service-network",
+        "start:watch": "nodemon --watch \"dist/**\" --exec \"sam local start-api --docker-network books-service_book-service-network\"",
         "prebuild": "npm run build:clean",
-        "build": "tsc && sam build",
-        "build:clean": "rm -rf dist && rm -rf .aws-sam",
+        "build": "tsc",
+        "build:watch": "npm run build -- --watch",
+        "build:clean": "rm -rf dist",
         "test": "echo \"Error: no test specified\" && exit 1",
         "docker:up": "docker-compose -f ./docker-compose.yml up -d",
         "docker:down": "docker-compose kill",
@@ -26,6 +28,7 @@
         "@typescript-eslint/parser": "^5.11.0",
         "eslint": "^8.9.0",
         "husky": "^7.0.4",
+        "nodemon": "^2.0.15",
         "pretty-quick": "^3.1.3",
         "ts-node": "^10.5.0",
         "typescript": "^4.5.5"
