--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,27 +5,28 @@ phases:
             nodejs: 14
     pre_build:
         commands:
+            - npm set-script prepare ""
             - npm ci --unsafe-perm
     build:
         commands:
             - npm run build
-            # - npm run test
+            - npm run test
     post_build:
         commands:
             - aws cloudformation package --template-file template.yaml --s3-bucket book-service-packages-ckzq3rnp2000009jwao6ofus8 --output-template-file packaged.yaml
 artifacts:
     files:
         - packaged.yaml
-# reports:
-#     clover:
-#         files:
-#             - clover.xml
-#         base-directory: jest/coverage
-#         discard-paths: false
-#         file-format: CLOVERXML
-#     junit:
-#         files:
-#             - junit.xml
-#         base-directory: jest/junit
-#         discard-paths: false
-#         file-format: JUNITXML
+reports:
+    clover:
+        files:
+            - clover.xml
+        base-directory: jest/coverage
+        discard-paths: false
+        file-format: CLOVERXML
+    junit:
+        files:
+            - junit.xml
+        base-directory: jest/junit
+        discard-paths: false
+        file-format: JUNITXML
