--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "build": "tsc",
         "build:watch": "npm run build -- --watch",
         "build:clean": "rm -rf dist",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "docker:up": "docker-compose -f ./docker-compose.yml up -d",
+        "test": "jest --coverage",
+        "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose kill",
         "docker:dynamodb:init": "aws dynamodb create-table --cli-input-json file://books.schema.json --endpoint-url http://localhost:8000",
         "cf:stack:deploy": "aws cloudformation deploy --template-file ./cloudformation.yaml --stack-name book-service-cicd --capabilities CAPABILITY_NAMED_IAM --parameter-overrides $(cat .env)",
@@ -24,12 +24,18 @@
     "license": "ISC",
     "devDependencies": {
         "@types/aws-lambda": "^8.10.92",
+        "@types/jest": "^27.4.0",
         "@types/node": "^17.0.17",
+        "@types/source-map-support": "^0.5.4",
         "@typescript-eslint/parser": "^5.11.0",
         "eslint": "^8.9.0",
         "husky": "^7.0.4",
+        "jest": "^27.5.1",
+        "jest-junit": "^13.0.0",
         "nodemon": "^2.0.15",
         "pretty-quick": "^3.1.3",
+        "source-map-support": "^0.5.21",
+        "ts-jest": "^27.1.3",
         "ts-node": "^10.5.0",
         "typescript": "^4.5.5"
     }
