--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -396,7 +396,7 @@ Resources:
                             Category: Deploy
                             Owner: AWS
                             Provider: CloudFormation
-                            Version: '1'
+                            Version: 1
                         InputArtifacts:
                             - Name: BuildArtifact
                         Configuration:
@@ -412,7 +412,7 @@ Resources:
                             Category: Deploy
                             Owner: AWS
                             Provider: CloudFormation
-                            Version: '1'
+                            Version: 1
                         Configuration:
                             ActionMode: CHANGE_SET_EXECUTE
                             StackName: book-service
