--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "author": "jquirossoto",
     "license": "ISC",
     "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^3.2.0",
         "@types/aws-lambda": "^8.10.92",
         "@types/jest": "^27.4.0",
         "@types/node": "^17.0.17",
