--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,5 @@
             "/opt/*": ["src/layers/common/*"]
         }
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules", "src/layers/dependencies/nodejs/node_modules", "src/**/*.spec.ts"]
+    "include": ["src/**/*.ts"]
 }
