--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "prepare": "husky install",
         "postinstall": "cd src/layers/dependencies/nodejs && npm ci",
         "prestart": "npm run build",
-        "start": "sam local start-api --docker-network books-service_book-service-network",
+        "start": "sam local start-api --env-vars env/local.env.json --docker-network books-service_book-service-network",
+        "start:debug": "sam local start-api --env-vars env/local.env.json --docker-network books-service_book-service-network --debug-port 9999",
         "start:watch": "nodemon --watch \"dist/**\" --exec \"sam local start-api --docker-network books-service_book-service-network\"",
         "prebuild": "npm run build:clean",
         "build": "tsc --project tsconfig.build.json",
@@ -25,6 +26,7 @@
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^3.2.0",
         "@types/aws-lambda": "^8.10.92",
+        "@types/http-errors": "^1.8.2",
         "@types/jest": "^27.4.0",
         "@types/node": "^17.0.17",
         "@types/source-map-support": "^0.5.4",
