--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
         "prepare": "husky install",
         "postinstall": "cd src/layers/dependencies/nodejs && npm ci",
         "prestart": "npm run build",
-        "start": "sam local start-api --env-vars env/local.env.json --docker-network books-service_book-service-network",
-        "start:debug": "sam local start-api --env-vars env/local.env.json --docker-network books-service_book-service-network --debug-port 9999",
-        "start:watch": "nodemon --watch \"dist/**\" --exec \"sam local start-api --docker-network books-service_book-service-network\"",
+        "start": "sam local start-api --debug-port 9999 --env-vars env/local.env.json --docker-network books-service_book-service-network",
+        "start:watch": "nodemon --watch \"dist/**\" --exec \"sam local start-api --debug-port 9999 --env-vars env/local.env.json --docker-network books-service_book-service-network\"",
         "prebuild": "npm run build:clean",
         "build": "tsc --project tsconfig.build.json",
         "build:watch": "npm run build -- --watch",
