--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@types/node": "^17.0.17",
         "@types/source-map-support": "^0.5.4",
         "@typescript-eslint/parser": "^5.11.0",
+        "aws-sdk-mock": "^5.6.2",
         "eslint": "^8.9.0",
         "husky": "^7.0.4",
         "jest": "^27.5.1",
