--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "build": "tsc --project tsconfig.build.json",
         "build:watch": "npm run build -- --watch",
         "build:clean": "rm -rf dist",
-        "test": "jest",
+        "test": "jest --coverage",
         "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose kill",
         "docker:dynamodb:init": "aws dynamodb create-table --cli-input-json file://books.schema.json --endpoint-url http://localhost:8000",
