improves test scripts

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "build": "tsc --project tsconfig.build.json",
         "build:watch": "npm run build -- --watch",
         "build:clean": "rm -rf dist",
+        "pretest": "npm run test:clean",
         "test": "jest --coverage",
+        "test:clean": "rm -rf jest",
         "docker:up": "docker-compose up -d",
         "docker:down": "docker-compose kill",
         "docker:dynamodb:init": "aws dynamodb create-table --cli-input-json file://books.schema.json --endpoint-url http://localhost:8000",
